--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
+<html lang="ja">
 <head>
-<title>プライバシーポリシー</title>
+    <meta charset="UTF-8">
+    <title>プライバシーポリシー</title>
 </head>
 <body>
 <h1>プライバシーポリシー</h1>
 
-<h2>対象アプリケーション</h2>
+<h2>対象アプリケーション（以下「本アプリ」）</h2>
 <ul>
 <li>佐渡アンケート</li>
 </ul>
