--- a/index-en.html
+++ b/index-en.html
@@ -1,30 +1,30 @@
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>プライバシーポリシー</title>
+    <title>Privacy Policy</title>
 </head>
 <body>
-<h1>プライバシーポリシー</h1>
+<h1>Privacy Policy</h1>
 
-<h2>対象アプリケーション（以下「本アプリ」）</h2>
+<h2>Target Application(hereinafter referred to as "this App")</h2>
 <ul>
-<li>佐渡アンケート</li>
+<li>Box and Ball 3D</li>
 </ul>
 
-<h2>利用者情報の取得</h2>
-<p>本アプリが利用者の個人情報を取得することはありません。</p>
+<h2>Acquisition of User Information</h2>
+<p>This App does not acquire any personal information of its users.</p>
 
-<h2>利用者情報の利用</h2>
-<p>本アプリが利用者の個人情報を利用することはありません。</p>
+<h2>Use of User Information</h2>
+<p>This App does not use any personal information of its users.</p>
 
-<h2>利用者情報の第三者提供</h2>
-<p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
+<h2>Provision of User Information to Third Parties</h2>
+<p>This App does not provide any personal information of its users to third parties.</p>
 
-<h2>使用ツール</h2>
-<p>本アプリでは、サードパーティ製のツールは使用していません。</p>
+<h2>Use of Tools</h2>
+<p>This App does not use any third-party tools.</p>
 
-<h2>お問い合わせ先</h2>
-<p>何かご不明な点がございましたら下記ページの「お問い合わせ」フォームからお問い合わせください。<br><a href="https://software-company-8690.business.site">はちエドHP</a></p>
+<h2>Contact Information</h2>
+<p>If you have any questions, please contact us using the inquiry form on the following page: <br><a href="https://software-company-8690.business.site">Hachi Edo HP</a></p>
 
 </body>
 </html>
